# pdf-pii-redaction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_CLASSIFICATION.md  IAP.md  PIPELINE.md  iam-asset-analysis-pii-documents.json  security-iam-evidence.md  vpc-sc-runbook.md
infra/: .terraform.lock.hcl  audit.tf  bucket.tf  cloud_run.tf  iam.tf  iap.tf  monitoring.tf  outputs.tf  pubsub.tf  variables.tf  versions.tf  vpc_sc.tf
infra/environments/: dev.tfvars.example
samples/: README.md
samples/multipage/: README.md
scripts/: generate_samples.py  pii_batch.py  probe_models.sh  set_models.py
src/pdf_anonymiser/: __init__.py  batch_runner.py  cli.py  config.py  gemini_client.py  obs.py  pii.py  pii_batch.py  pii_events.py  pii_pricing.py  pii_result_store.py  pii_review.py  pii_type_agent.py  prompts.py  redaction_agent.py  redaction_judge.py  redaction_metrics.py  retry.py  synthesize.py
src/pdf_anonymiser/webapp/: __init__.py  __main__.py  app.py
src/pdf_anonymiser/webapp/static/: style.css
src/pdf_anonymiser/webapp/templates/: _progress.html  _type_picker.html  base.html  document.html  job.html  launch.html
tests/: conftest.py  test_obs.py  test_pii.py  test_pii_batch.py  test_pii_events.py  test_pii_pricing.py  test_pii_result_store.py  test_pii_review.py  test_pii_type_agent.py  test_prompts.py  test_redaction_agent.py  test_redaction_judge.py  test_redaction_metrics.py  test_retry.py  test_set_models.py  test_webapp.py
