[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-anonymiser"
version = "0.1.0"
description = "Synthetic PII anonymisation for scanned PDFs — detect, regenerate, judge, human-review. GCS-only."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pillow>=10.3",
    "pypdfium2>=4.30",
]

[project.optional-dependencies]
# The live cloud path (Gemini, DLP, GCS, Pub/Sub). Not needed to run the unit suite.
gcp = [
    "google-genai>=1.2",
    "google-cloud-storage>=2.16",
    "google-cloud-dlp>=3.18",
    "google-cloud-pubsub>=2.21",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
pdf-anonymise = "pdf_anonymiser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_anonymiser"]

[tool.pytest.ini_options]
addopts = "--cov=pdf_anonymiser --cov-branch --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
# CLI / server entrypoints and the Cloud Run batch shard are deploy glue over the
# unit-tested library (run_batch, the processor, the store) — exercised live, not in CI.
omit = ["*/cli.py", "*/__main__.py", "*/batch_runner.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
# E501: long lines are fine in prose comments. B008: FastAPI's Form()/Depends()
# default-argument pattern is intentional and idiomatic. RUF002: docstrings use
# real math symbols (∪ union, × times, – en-dash) deliberately.
ignore = ["E501", "B008", "RUF002"]

[tool.ruff.lint.per-file-ignores]
# tests deliberately unpack-and-ignore tuples and keep small fixtures.
"tests/*" = ["RUF059"]
